# lwslog

./: .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md
.github/workflows/: CICD.yml
inc/: FreeLoggerImpl.hpp  logger.hpp  message.hpp  sink.hpp
inc/core/: level.hpp  logger.hpp  message.hpp  sink.hpp
inc/sinks/: FileSink.hpp  OstreamSink.hpp  SocketSink.hpp
inc/utils/: formatter.hpp
src/: FileSink.cpp  SocketSink.cpp
